# GutModelBacteriocins

./: .dockerignore  .gitattributes  .gitignore  AGENTS.md  CMakeLists.txt  EARI.md  GutIBM Spec 1_ Chemical Environment.md  GutIBM Spec 2_ Bacteriocin Induction.md  GutIBM Spec 3_ Cell Biology.md  GutIBM Spec 4 v2_ Mechanistic Gaps + Output Schedule.md  GutIBM Spec 5_ Species Wiring Fixes.md  README.md  VADI.md  rebuild_and_run.sh  sonar-project.properties
.github/workflows/: benchmark-nightly.yml  ci.yml
build-release/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
build-release/tests/: CTestTestfile.cmake  Makefile  test_O2_growth_boost  test_acetate_mete  test_adaptive_dt  test_advection_peristaltic  test_agent  test_agent_transfer  test_bacteriocin  test_cdi  test_config_diversity  test_config_ingestion  test_conjugation  test_domain_decomp  test_ethanolamine  test_fix_registry  test_fmm  test_fur  test_gpu_smoke  test_greens_function  test_greens_function_gpu  test_hdf5_checkpoint  test_hdf5_roundtrip  test_immunity_escape  test_input_parser  test_iron_fallback  test_mechanics  test_motility  test_mpi_multi_rank  test_mucin_liberation  test_mutation  test_octree  test_openmp_parity  test_oxygen_gradient  test_path_utils  test_protease_decay  test_receptor  test_scaling_benchmark  test_smoke  test_spatial_hash  (+1 more)
deploy/aws/: .dockerignore  01_push_image.sh  02_setup_practice_stack.ps1  02_setup_practice_stack.sh  03_submit_smoke.sh  04_watch_job.sh  05_setup_campaign_stack.ps1  05_setup_campaign_stack.sh  Dockerfile  README.md  entry.sh  env.ps1  env.sh  submit_array_example.sh
docs/: API.md  AWS_BATCH.md  BATCH_RUNNER.md  CONFIG_FORMAT.md  MECHANISMS.md  PARAMETERS.md  PROJECT_BOARD.md  RECEPTOR_LIGAND_PARAMETERIZATION.md  SCALING.md  SONARQUBE_PLAN.md  WIRING_AUDIT.md  WSL2_SETUP.md
examples/batch_scan/: README.md  batch.json  batch_ci.json
examples/cell_biology/: README.md  input.json
examples/diversity_paradox/: README.md  input.json
examples/eari_vadi_validation/: README.md  input.json
examples/scaling_benchmark/: input_1e5.json  input_1e6.json
examples/single_colony/: README.md  input.json
experiments/: README.md  smoke_batch.json  smoke_gpu.json  smoke_gpu_batch.json  smoke_single.json
experiments/diversity_campaign/: README.md  baseline.json  batch_baseline.json  batch_full_mechanisms.json  batch_kd_sweep.json  full_mechanisms.json  kd_sweep_1e-6.json  kd_sweep_1e-7.json  kd_sweep_1e-8.json  kd_sweep_1e-9.json
python/: requirements.txt  setup.py
python/gut_ibm_tools/: __init__.py  analysis.py  aws_batch_export.py  batch_config.py  batch_manifest.py  batch_runner.py  fish_observation.py  hdf5_gzip.py  hdf5_reader.py  path_utils.py  validation.py  validation_regression.py  visualization.py
python/tests/: conftest.py  test_analysis.py  test_aws_batch_export.py  test_batch_runner.py  test_eari_vadi_regression.py  test_fish_observation.py  test_hdf5_gzip.py  test_hdf5_reader.py  test_hdf5_writer_roundtrip.py  test_path_utils.py  test_validation.py  test_visualization.py
scripts/: compare_gpu_parity.sh  compare_openmp_parity.sh  run_gpu_scaling_benchmark.sh  run_mpi_scaling_smoke.sh  run_scaling_benchmark.sh  setup_project_board.sh  smoke_batch_runner.sh  sonar_wont_fix_debt.py  validate_config_json.sh  validate_eari_vadi.sh
sonar/: pythonsecurity-s8707.json
src/: main.cpp
src/core/: agent.cpp  agent.h  agent_transfer.cpp  agent_transfer.h  domain.cpp  domain.h  error.h  random.h  receptor_utils.h  simulation.cpp  simulation.h  spatial_hash.cpp  spatial_hash.h  species_names.h  step_events.h  step_profiler.h  stop_signal.cpp  stop_signal.h  types.h
src/diffusion/: fmm.cpp  fmm.h  fmm_kernel.cpp  fmm_kernel.h  greens_function.cpp  greens_function.h  octree.cpp  octree.h  qssa_solver.cpp  qssa_solver.h
src/fields/: advection.cpp  advection.h  chemical_field.cpp  chemical_field.h  vbf.cpp  vbf.h
src/fixes/: fix.h  fix_bacteriocin.cpp  fix_bacteriocin.h  fix_cdi.cpp  fix_cdi.h  fix_conjugation.cpp  fix_conjugation.h  fix_mechanics.cpp  fix_mechanics.h  fix_metabolism.cpp  fix_metabolism.h  fix_motility.cpp  fix_motility.h  fix_mutation.cpp  fix_mutation.h  fix_quorum_sensing.cpp  fix_quorum_sensing.h  fix_receptor.cpp  fix_receptor.h  fix_registry.cpp  fix_registry.h
src/genome/: lineage_tracker.cpp  lineage_tracker.h  plasmid.cpp  plasmid.h
src/gpu/: README.md  agent_pool_gpu.cpp  agent_pool_gpu.h  agent_update_kernel.cu  chemical_field_gpu.cpp  chemical_field_gpu.h  chemistry_kernel.cu  chemistry_pipeline.cpp  chemistry_pipeline.h  cuda_aware_mpi.cpp  cuda_aware_mpi.h  device.cpp  device.h  device_memory.h  diffusion_gpu.cpp  diffusion_gpu.h  diffusion_kernel.cu  dispatch.cpp  dispatch.h  field_update_kernel.cu  fmm_far_kernel.cu  fmm_gpu.cpp  fmm_gpu.h  gpu_common.cuh  gpu_config.h  gpu_kernels.h  gpu_profile.cpp  gpu_profile.h  (+17 more)
tests/: CMakeLists.txt  hdf5_test_helpers.h  mechanics_test_helpers.h  mpi_test_helpers.h  sim_fingerprint.h  test_O2_growth_boost.cpp  test_acetate_mete.cpp  test_adaptive_dt.cpp  test_advection_peristaltic.cpp  test_agent.cpp  test_agent_transfer.cpp  test_assertions_enabled.cpp  test_bacteriocin.cpp  test_cdi.cpp  test_config_diversity.cpp  test_config_ingestion.cpp  test_conjugation.cpp  test_cuda_aware_mpi_reaction.cpp  test_data_defaults.cpp  test_domain_decomp.cpp  test_ethanolamine.cpp  test_feature_combinations.cpp  test_fix_registry.cpp  test_fmm.cpp  test_fur.cpp  test_gpu_chemical_field.cpp  test_gpu_diffusion.cpp  test_gpu_feature_combinations.cpp  test_gpu_production_path.cpp  test_gpu_receptor_layout.cpp  test_gpu_scaling_benchmark.cpp  test_gpu_smoke.cpp  test_greens_function.cpp  test_greens_function_gpu.cpp  test_hdf5_checkpoint.cpp  test_hdf5_compression.cpp  test_hdf5_graceful_shutdown.cpp  test_hdf5_roundtrip.cpp  test_hdf5_schedule.cpp  test_immunity_escape.cpp  (+31 more)
tests/fixtures/: parser_bad_numeric.json  parser_bad_numeric.legacy  parser_chem_env.json  parser_fix_tunables.json  parser_fixes.json  parser_fmm_peristaltic.json  parser_gpu.json  parser_strains.json
(+53 files in other folders)
