file(GLOB_RECURSE LIB_SOURCES
  ${CMAKE_SOURCE_DIR}/src/core/*.cpp
  ${CMAKE_SOURCE_DIR}/src/fields/*.cpp
  ${CMAKE_SOURCE_DIR}/src/diffusion/*.cpp
  ${CMAKE_SOURCE_DIR}/src/fixes/*.cpp
  ${CMAKE_SOURCE_DIR}/src/genome/*.cpp
  ${CMAKE_SOURCE_DIR}/src/io/*.cpp
  ${CMAKE_SOURCE_DIR}/src/gpu/*.cpp
)

set(LIB_CUDA_SOURCES "")
if(GUTIBM_USE_CUDA)
  file(GLOB LIB_CUDA_SOURCES ${CMAKE_SOURCE_DIR}/src/gpu/*.cu)
endif()

set(TEST_INCLUDE_DIRS
  ${CMAKE_SOURCE_DIR}/src
  ${CMAKE_SOURCE_DIR}/src/core
  ${CMAKE_SOURCE_DIR}/src/fields
  ${CMAKE_SOURCE_DIR}/src/diffusion
  ${CMAKE_SOURCE_DIR}/src/fixes
  ${CMAKE_SOURCE_DIR}/src/genome
  ${CMAKE_SOURCE_DIR}/src/io
  ${CMAKE_SOURCE_DIR}/src/gpu
)

# ── test_spatial_hash ────────────────────────────────────────────────────
add_executable(test_spatial_hash test_spatial_hash.cpp ${LIB_SOURCES})
target_include_directories(test_spatial_hash PRIVATE ${TEST_INCLUDE_DIRS})
if(GUTIBM_USE_MPI)
  target_link_libraries(test_spatial_hash PRIVATE MPI::MPI_CXX)
endif()
if(GUTIBM_USE_HDF5)
  target_include_directories(test_spatial_hash PRIVATE ${HDF5_INCLUDE_DIRS})
  target_link_libraries(test_spatial_hash PRIVATE ${HDF5_LIBRARIES})
endif()
if(GUTIBM_USE_OPENMP)
  target_link_libraries(test_spatial_hash PRIVATE OpenMP::OpenMP_CXX)
endif()
target_link_libraries(test_spatial_hash PRIVATE ${MATH_LIB})
add_test(NAME spatial_hash COMMAND test_spatial_hash)

# ── test_greens_function ─────────────────────────────────────────────────
add_executable(test_greens_function test_greens_function.cpp ${LIB_SOURCES})
target_include_directories(test_greens_function PRIVATE ${TEST_INCLUDE_DIRS})
if(GUTIBM_USE_MPI)
  target_link_libraries(test_greens_function PRIVATE MPI::MPI_CXX)
endif()
if(GUTIBM_USE_HDF5)
  target_include_directories(test_greens_function PRIVATE ${HDF5_INCLUDE_DIRS})
  target_link_libraries(test_greens_function PRIVATE ${HDF5_LIBRARIES})
endif()
if(GUTIBM_USE_OPENMP)
  target_link_libraries(test_greens_function PRIVATE OpenMP::OpenMP_CXX)
endif()
target_link_libraries(test_greens_function PRIVATE ${MATH_LIB})
add_test(NAME greens_function COMMAND test_greens_function)

# ── test_agent ───────────────────────────────────────────────────────────
add_executable(test_agent test_agent.cpp ${LIB_SOURCES})
target_include_directories(test_agent PRIVATE ${TEST_INCLUDE_DIRS})
if(GUTIBM_USE_MPI)
  target_link_libraries(test_agent PRIVATE MPI::MPI_CXX)
endif()
if(GUTIBM_USE_HDF5)
  target_include_directories(test_agent PRIVATE ${HDF5_INCLUDE_DIRS})
  target_link_libraries(test_agent PRIVATE ${HDF5_LIBRARIES})
endif()
if(GUTIBM_USE_OPENMP)
  target_link_libraries(test_agent PRIVATE OpenMP::OpenMP_CXX)
endif()
target_link_libraries(test_agent PRIVATE ${MATH_LIB})
add_test(NAME agent COMMAND test_agent)

# ── test_iron_fallback ────────────────────────────────────────────────────
add_executable(test_iron_fallback test_iron_fallback.cpp ${LIB_SOURCES})
target_include_directories(test_iron_fallback PRIVATE ${TEST_INCLUDE_DIRS})
if(GUTIBM_USE_MPI)
  target_link_libraries(test_iron_fallback PRIVATE MPI::MPI_CXX)
endif()
if(GUTIBM_USE_HDF5)
  target_include_directories(test_iron_fallback PRIVATE ${HDF5_INCLUDE_DIRS})
  target_link_libraries(test_iron_fallback PRIVATE ${HDF5_LIBRARIES})
endif()
target_link_libraries(test_iron_fallback PRIVATE ${MATH_LIB})
add_test(NAME iron_fallback COMMAND test_iron_fallback)

# ── test_octree ──────────────────────────────────────────────────────────
add_executable(test_octree test_octree.cpp ${LIB_SOURCES})
target_include_directories(test_octree PRIVATE ${TEST_INCLUDE_DIRS})
if(GUTIBM_USE_MPI)
  target_link_libraries(test_octree PRIVATE MPI::MPI_CXX)
endif()
if(GUTIBM_USE_HDF5)
  target_include_directories(test_octree PRIVATE ${HDF5_INCLUDE_DIRS})
  target_link_libraries(test_octree PRIVATE ${HDF5_LIBRARIES})
endif()
target_link_libraries(test_octree PRIVATE ${MATH_LIB})
add_test(NAME octree COMMAND test_octree)

# ── test_conjugation ─────────────────────────────────────────────────────
add_executable(test_conjugation test_conjugation.cpp ${LIB_SOURCES})
target_include_directories(test_conjugation PRIVATE ${TEST_INCLUDE_DIRS})
if(GUTIBM_USE_MPI)
  target_link_libraries(test_conjugation PRIVATE MPI::MPI_CXX)
endif()
if(GUTIBM_USE_HDF5)
  target_include_directories(test_conjugation PRIVATE ${HDF5_INCLUDE_DIRS})
  target_link_libraries(test_conjugation PRIVATE ${HDF5_LIBRARIES})
endif()
target_link_libraries(test_conjugation PRIVATE ${MATH_LIB})
add_test(NAME conjugation COMMAND test_conjugation)

# ── test_smoke (end-to-end integration) ──────────────────────────────────
add_executable(test_smoke test_smoke.cpp ${LIB_SOURCES})
target_include_directories(test_smoke PRIVATE ${TEST_INCLUDE_DIRS})
if(GUTIBM_USE_MPI)
  target_link_libraries(test_smoke PRIVATE MPI::MPI_CXX)
endif()
if(GUTIBM_USE_HDF5)
  target_include_directories(test_smoke PRIVATE ${HDF5_INCLUDE_DIRS})
  target_link_libraries(test_smoke PRIVATE ${HDF5_LIBRARIES})
endif()
if(GUTIBM_USE_OPENMP)
  target_link_libraries(test_smoke PRIVATE OpenMP::OpenMP_CXX)
endif()
target_link_libraries(test_smoke PRIVATE ${MATH_LIB})
add_test(NAME smoke COMMAND test_smoke)

# ── test_z_gradient (z-dependent nutrient gradient) ──────────────────────
add_executable(test_z_gradient test_z_gradient.cpp ${LIB_SOURCES})
target_include_directories(test_z_gradient PRIVATE ${TEST_INCLUDE_DIRS})
if(GUTIBM_USE_MPI)
  target_link_libraries(test_z_gradient PRIVATE MPI::MPI_CXX)
endif()
if(GUTIBM_USE_HDF5)
  target_include_directories(test_z_gradient PRIVATE ${HDF5_INCLUDE_DIRS})
  target_link_libraries(test_z_gradient PRIVATE ${HDF5_LIBRARIES})
endif()
target_link_libraries(test_z_gradient PRIVATE ${MATH_LIB})
add_test(NAME z_gradient COMMAND test_z_gradient)

# ── test_domain_decomp (MPI decomposition unit tests) ────────────────────
add_executable(test_domain_decomp test_domain_decomp.cpp ${LIB_SOURCES})
target_include_directories(test_domain_decomp PRIVATE ${TEST_INCLUDE_DIRS})
if(GUTIBM_USE_MPI)
  target_link_libraries(test_domain_decomp PRIVATE MPI::MPI_CXX)
endif()
if(GUTIBM_USE_HDF5)
  target_include_directories(test_domain_decomp PRIVATE ${HDF5_INCLUDE_DIRS})
  target_link_libraries(test_domain_decomp PRIVATE ${HDF5_LIBRARIES})
endif()
target_link_libraries(test_domain_decomp PRIVATE ${MATH_LIB})
add_test(NAME domain_decomp COMMAND test_domain_decomp)

# ── test_acetate_mete (acetate inhibition of MetE, issue #8) ─────────────
add_executable(test_acetate_mete test_acetate_mete.cpp ${LIB_SOURCES})
target_include_directories(test_acetate_mete PRIVATE ${TEST_INCLUDE_DIRS})
if(GUTIBM_USE_MPI)
  target_link_libraries(test_acetate_mete PRIVATE MPI::MPI_CXX)
endif()
if(GUTIBM_USE_HDF5)
  target_include_directories(test_acetate_mete PRIVATE ${HDF5_INCLUDE_DIRS})
  target_link_libraries(test_acetate_mete PRIVATE ${HDF5_LIBRARIES})
endif()
target_link_libraries(test_acetate_mete PRIVATE ${MATH_LIB})
add_test(NAME acetate_mete COMMAND test_acetate_mete)

# ── test_advection_peristaltic ───────────────────────────────────────────
add_executable(test_advection_peristaltic test_advection_peristaltic.cpp ${LIB_SOURCES})
target_include_directories(test_advection_peristaltic PRIVATE ${TEST_INCLUDE_DIRS})
if(GUTIBM_USE_MPI)
  target_link_libraries(test_advection_peristaltic PRIVATE MPI::MPI_CXX)
endif()
if(GUTIBM_USE_HDF5)
  target_include_directories(test_advection_peristaltic PRIVATE ${HDF5_INCLUDE_DIRS})
  target_link_libraries(test_advection_peristaltic PRIVATE ${HDF5_LIBRARIES})
endif()
target_link_libraries(test_advection_peristaltic PRIVATE ${MATH_LIB})
add_test(NAME advection_peristaltic COMMAND test_advection_peristaltic)

# ── test_immunity_escape (Issue #12: affinity-neutralization matrix) ─────
add_executable(test_immunity_escape test_immunity_escape.cpp ${LIB_SOURCES})
target_include_directories(test_immunity_escape PRIVATE ${TEST_INCLUDE_DIRS})
if(GUTIBM_USE_MPI)
  target_link_libraries(test_immunity_escape PRIVATE MPI::MPI_CXX)
endif()
if(GUTIBM_USE_HDF5)
  target_include_directories(test_immunity_escape PRIVATE ${HDF5_INCLUDE_DIRS})
  target_link_libraries(test_immunity_escape PRIVATE ${HDF5_LIBRARIES})
endif()
target_link_libraries(test_immunity_escape PRIVATE ${MATH_LIB})
add_test(NAME immunity_escape COMMAND test_immunity_escape)

# ── test_mechanics ───────────────────────────────────────────────────────
add_executable(test_mechanics test_mechanics.cpp ${LIB_SOURCES})
target_include_directories(test_mechanics PRIVATE ${TEST_INCLUDE_DIRS})
if(GUTIBM_USE_MPI)
  target_link_libraries(test_mechanics PRIVATE MPI::MPI_CXX)
endif()
if(GUTIBM_USE_HDF5)
  target_include_directories(test_mechanics PRIVATE ${HDF5_INCLUDE_DIRS})
  target_link_libraries(test_mechanics PRIVATE ${HDF5_LIBRARIES})
endif()
target_link_libraries(test_mechanics PRIVATE ${MATH_LIB})
add_test(NAME mechanics COMMAND test_mechanics)

# ── test_ethanolamine (nutrient-conditional eut penalty) ─────────────────
add_executable(test_ethanolamine test_ethanolamine.cpp ${LIB_SOURCES})
target_include_directories(test_ethanolamine PRIVATE ${TEST_INCLUDE_DIRS})
if(GUTIBM_USE_MPI)
  target_link_libraries(test_ethanolamine PRIVATE MPI::MPI_CXX)
endif()
if(GUTIBM_USE_HDF5)
  target_include_directories(test_ethanolamine PRIVATE ${HDF5_INCLUDE_DIRS})
  target_link_libraries(test_ethanolamine PRIVATE ${HDF5_LIBRARIES})
endif()
target_link_libraries(test_ethanolamine PRIVATE ${MATH_LIB})
add_test(NAME ethanolamine COMMAND test_ethanolamine)

# ── test_openmp_parity ───────────────────────────────────────────────────
add_executable(test_openmp_parity test_openmp_parity.cpp ${LIB_SOURCES})
target_include_directories(test_openmp_parity PRIVATE ${TEST_INCLUDE_DIRS})
if(GUTIBM_USE_MPI)
  target_link_libraries(test_openmp_parity PRIVATE MPI::MPI_CXX)
endif()
if(GUTIBM_USE_HDF5)
  target_include_directories(test_openmp_parity PRIVATE ${HDF5_INCLUDE_DIRS})
  target_link_libraries(test_openmp_parity PRIVATE ${HDF5_LIBRARIES})
endif()
if(GUTIBM_USE_OPENMP)
  target_link_libraries(test_openmp_parity PRIVATE OpenMP::OpenMP_CXX)
endif()
target_link_libraries(test_openmp_parity PRIVATE ${MATH_LIB})
add_test(NAME openmp_parity COMMAND test_openmp_parity)

# ── test_adaptive_dt ─────────────────────────────────────────────────────
add_executable(test_adaptive_dt test_adaptive_dt.cpp ${LIB_SOURCES})
target_include_directories(test_adaptive_dt PRIVATE ${TEST_INCLUDE_DIRS})
if(GUTIBM_USE_MPI)
  target_link_libraries(test_adaptive_dt PRIVATE MPI::MPI_CXX)
endif()
if(GUTIBM_USE_HDF5)
  target_include_directories(test_adaptive_dt PRIVATE ${HDF5_INCLUDE_DIRS})
  target_link_libraries(test_adaptive_dt PRIVATE ${HDF5_LIBRARIES})
endif()
target_link_libraries(test_adaptive_dt PRIVATE ${MATH_LIB})
add_test(NAME adaptive_dt COMMAND test_adaptive_dt)

# ── test_agent_transfer ──────────────────────────────────────────────────
add_executable(test_agent_transfer test_agent_transfer.cpp ${LIB_SOURCES})
target_include_directories(test_agent_transfer PRIVATE ${TEST_INCLUDE_DIRS})
if(GUTIBM_USE_MPI)
  target_link_libraries(test_agent_transfer PRIVATE MPI::MPI_CXX)
endif()
if(GUTIBM_USE_HDF5)
  target_include_directories(test_agent_transfer PRIVATE ${HDF5_INCLUDE_DIRS})
  target_link_libraries(test_agent_transfer PRIVATE ${HDF5_LIBRARIES})
endif()
if(GUTIBM_USE_OPENMP)
  target_link_libraries(test_agent_transfer PRIVATE OpenMP::OpenMP_CXX)
endif()
target_link_libraries(test_agent_transfer PRIVATE ${MATH_LIB})
add_test(NAME agent_transfer COMMAND test_agent_transfer)

# ── test_fix_registry ────────────────────────────────────────────────────
add_executable(test_fix_registry test_fix_registry.cpp ${LIB_SOURCES})
target_include_directories(test_fix_registry PRIVATE ${TEST_INCLUDE_DIRS})
if(GUTIBM_USE_MPI)
  target_link_libraries(test_fix_registry PRIVATE MPI::MPI_CXX)
endif()
if(GUTIBM_USE_HDF5)
  target_include_directories(test_fix_registry PRIVATE ${HDF5_INCLUDE_DIRS})
  target_link_libraries(test_fix_registry PRIVATE ${HDF5_LIBRARIES})
endif()
if(GUTIBM_USE_OPENMP)
  target_link_libraries(test_fix_registry PRIVATE OpenMP::OpenMP_CXX)
endif()
target_link_libraries(test_fix_registry PRIVATE ${MATH_LIB})
add_test(NAME fix_registry COMMAND test_fix_registry)

# ── test_input_parser ────────────────────────────────────────────────────
add_executable(test_input_parser test_input_parser.cpp ${LIB_SOURCES})
target_include_directories(test_input_parser PRIVATE ${TEST_INCLUDE_DIRS})
target_compile_definitions(test_input_parser PRIVATE GUTIBM_SOURCE_DIR="${CMAKE_SOURCE_DIR}")
if(GUTIBM_USE_MPI)
  target_link_libraries(test_input_parser PRIVATE MPI::MPI_CXX)
endif()
if(GUTIBM_USE_HDF5)
  target_include_directories(test_input_parser PRIVATE ${HDF5_INCLUDE_DIRS})
  target_link_libraries(test_input_parser PRIVATE ${HDF5_LIBRARIES})
endif()
if(GUTIBM_USE_OPENMP)
  target_link_libraries(test_input_parser PRIVATE OpenMP::OpenMP_CXX)
endif()
target_link_libraries(test_input_parser PRIVATE ${MATH_LIB})
add_test(NAME input_parser COMMAND test_input_parser)

# ── test_bacteriocin ─────────────────────────────────────────────────────
add_executable(test_bacteriocin test_bacteriocin.cpp ${LIB_SOURCES})
target_include_directories(test_bacteriocin PRIVATE ${TEST_INCLUDE_DIRS})
if(GUTIBM_USE_MPI)
  target_link_libraries(test_bacteriocin PRIVATE MPI::MPI_CXX)
endif()
if(GUTIBM_USE_HDF5)
  target_include_directories(test_bacteriocin PRIVATE ${HDF5_INCLUDE_DIRS})
  target_link_libraries(test_bacteriocin PRIVATE ${HDF5_LIBRARIES})
endif()
if(GUTIBM_USE_OPENMP)
  target_link_libraries(test_bacteriocin PRIVATE OpenMP::OpenMP_CXX)
endif()
target_link_libraries(test_bacteriocin PRIVATE ${MATH_LIB})
add_test(NAME bacteriocin COMMAND test_bacteriocin)

# ── test_receptor ────────────────────────────────────────────────────────
add_executable(test_receptor test_receptor.cpp ${LIB_SOURCES})
target_include_directories(test_receptor PRIVATE ${TEST_INCLUDE_DIRS})
if(GUTIBM_USE_MPI)
  target_link_libraries(test_receptor PRIVATE MPI::MPI_CXX)
endif()
if(GUTIBM_USE_HDF5)
  target_include_directories(test_receptor PRIVATE ${HDF5_INCLUDE_DIRS})
  target_link_libraries(test_receptor PRIVATE ${HDF5_LIBRARIES})
endif()
if(GUTIBM_USE_OPENMP)
  target_link_libraries(test_receptor PRIVATE OpenMP::OpenMP_CXX)
endif()
target_link_libraries(test_receptor PRIVATE ${MATH_LIB})
add_test(NAME receptor COMMAND test_receptor)

# ── test_mutation ────────────────────────────────────────────────────────
add_executable(test_mutation test_mutation.cpp ${LIB_SOURCES})
target_include_directories(test_mutation PRIVATE ${TEST_INCLUDE_DIRS})
if(GUTIBM_USE_MPI)
  target_link_libraries(test_mutation PRIVATE MPI::MPI_CXX)
endif()
if(GUTIBM_USE_HDF5)
  target_include_directories(test_mutation PRIVATE ${HDF5_INCLUDE_DIRS})
  target_link_libraries(test_mutation PRIVATE ${HDF5_LIBRARIES})
endif()
if(GUTIBM_USE_OPENMP)
  target_link_libraries(test_mutation PRIVATE OpenMP::OpenMP_CXX)
endif()
target_link_libraries(test_mutation PRIVATE ${MATH_LIB})
add_test(NAME mutation COMMAND test_mutation)

# ── test_hdf5_roundtrip ──────────────────────────────────────────────────
if(GUTIBM_USE_HDF5)
  add_executable(test_hdf5_roundtrip test_hdf5_roundtrip.cpp ${LIB_SOURCES})
  target_include_directories(test_hdf5_roundtrip PRIVATE ${TEST_INCLUDE_DIRS})
  if(GUTIBM_USE_MPI)
    target_link_libraries(test_hdf5_roundtrip PRIVATE MPI::MPI_CXX)
  endif()
  target_include_directories(test_hdf5_roundtrip PRIVATE ${HDF5_INCLUDE_DIRS})
  target_link_libraries(test_hdf5_roundtrip PRIVATE ${HDF5_LIBRARIES})
  if(GUTIBM_USE_OPENMP)
    target_link_libraries(test_hdf5_roundtrip PRIVATE OpenMP::OpenMP_CXX)
  endif()
  target_link_libraries(test_hdf5_roundtrip PRIVATE ${MATH_LIB})
  add_test(NAME hdf5_roundtrip COMMAND test_hdf5_roundtrip)
  # Parallel round-trip (np>1) is deferred: HDF5Writer step groups are created
  # on every rank without existence checks, causing duplicate-link errors.

  add_executable(test_hdf5_checkpoint test_hdf5_checkpoint.cpp ${LIB_SOURCES})
  target_include_directories(test_hdf5_checkpoint PRIVATE ${TEST_INCLUDE_DIRS})
  if(GUTIBM_USE_MPI)
    target_link_libraries(test_hdf5_checkpoint PRIVATE MPI::MPI_CXX)
  endif()
  target_include_directories(test_hdf5_checkpoint PRIVATE ${HDF5_INCLUDE_DIRS})
  target_link_libraries(test_hdf5_checkpoint PRIVATE ${HDF5_LIBRARIES})
  if(GUTIBM_USE_OPENMP)
    target_link_libraries(test_hdf5_checkpoint PRIVATE OpenMP::OpenMP_CXX)
  endif()
  target_link_libraries(test_hdf5_checkpoint PRIVATE ${MATH_LIB})
  add_test(NAME hdf5_checkpoint COMMAND test_hdf5_checkpoint)
endif()

# ── test_mpi_multi_rank (requires mpirun -np >= 2) ───────────────────────
if(GUTIBM_USE_MPI)
  add_executable(test_mpi_multi_rank test_mpi_multi_rank.cpp ${LIB_SOURCES})
  target_include_directories(test_mpi_multi_rank PRIVATE ${TEST_INCLUDE_DIRS})
  target_link_libraries(test_mpi_multi_rank PRIVATE MPI::MPI_CXX)
  if(GUTIBM_USE_HDF5)
    target_include_directories(test_mpi_multi_rank PRIVATE ${HDF5_INCLUDE_DIRS})
    target_link_libraries(test_mpi_multi_rank PRIVATE ${HDF5_LIBRARIES})
  endif()
  if(GUTIBM_USE_OPENMP)
    target_link_libraries(test_mpi_multi_rank PRIVATE OpenMP::OpenMP_CXX)
  endif()
  target_link_libraries(test_mpi_multi_rank PRIVATE ${MATH_LIB})
  add_test(
    NAME mpi_multi_rank
    COMMAND ${MPIEXEC_EXECUTABLE} ${MPIEXEC_NUMPROC_FLAG} 2
            ${MPIEXEC_PREFLAGS} $<TARGET_FILE:test_mpi_multi_rank> ${MPIEXEC_POSTFLAGS}
  )
  set_tests_properties(mpi_multi_rank PROPERTIES
    PASS_REGULAR_EXPRESSION "All MPI multi-rank tests passed"
  )
endif()

# ── test_greens_function_gpu ─────────────────────────────────────────────
add_executable(test_greens_function_gpu test_greens_function_gpu.cpp ${LIB_SOURCES} ${LIB_CUDA_SOURCES})
target_include_directories(test_greens_function_gpu PRIVATE ${TEST_INCLUDE_DIRS})
if(GUTIBM_USE_MPI)
  target_link_libraries(test_greens_function_gpu PRIVATE MPI::MPI_CXX)
endif()
if(GUTIBM_USE_HDF5)
  target_include_directories(test_greens_function_gpu PRIVATE ${HDF5_INCLUDE_DIRS})
  target_link_libraries(test_greens_function_gpu PRIVATE ${HDF5_LIBRARIES})
endif()
if(GUTIBM_USE_OPENMP)
  target_link_libraries(test_greens_function_gpu PRIVATE OpenMP::OpenMP_CXX)
endif()
if(GUTIBM_USE_CUDA)
  target_link_libraries(test_greens_function_gpu PRIVATE CUDA::cudart)
  set_target_properties(test_greens_function_gpu PROPERTIES CUDA_SEPARABLE_COMPILATION ON)
endif()
target_link_libraries(test_greens_function_gpu PRIVATE ${MATH_LIB})
add_test(NAME greens_function_gpu COMMAND test_greens_function_gpu)

# ── test_gpu_smoke ───────────────────────────────────────────────────────
add_executable(test_gpu_smoke test_gpu_smoke.cpp ${LIB_SOURCES} ${LIB_CUDA_SOURCES})
target_include_directories(test_gpu_smoke PRIVATE ${TEST_INCLUDE_DIRS})
if(GUTIBM_USE_MPI)
  target_link_libraries(test_gpu_smoke PRIVATE MPI::MPI_CXX)
endif()
if(GUTIBM_USE_HDF5)
  target_include_directories(test_gpu_smoke PRIVATE ${HDF5_INCLUDE_DIRS})
  target_link_libraries(test_gpu_smoke PRIVATE ${HDF5_LIBRARIES})
endif()
if(GUTIBM_USE_OPENMP)
  target_link_libraries(test_gpu_smoke PRIVATE OpenMP::OpenMP_CXX)
endif()
if(GUTIBM_USE_CUDA)
  target_link_libraries(test_gpu_smoke PRIVATE CUDA::cudart)
  set_target_properties(test_gpu_smoke PROPERTIES CUDA_SEPARABLE_COMPILATION ON)
endif()
target_link_libraries(test_gpu_smoke PRIVATE ${MATH_LIB})
add_test(NAME gpu_smoke COMMAND test_gpu_smoke)

# Link CUDA objects into all library-backed tests when enabled
if(GUTIBM_USE_CUDA)
  set(GUTIBM_ALL_TEST_TARGETS
    test_spatial_hash test_greens_function test_agent test_iron_fallback
    test_octree test_conjugation test_smoke test_z_gradient test_domain_decomp
    test_acetate_mete test_advection_peristaltic test_immunity_escape test_mechanics
    test_ethanolamine test_openmp_parity test_adaptive_dt test_agent_transfer
    test_fix_registry test_input_parser test_bacteriocin test_receptor test_mutation
    test_hdf5_roundtrip test_hdf5_checkpoint test_mpi_multi_rank
  )
  foreach(tgt ${GUTIBM_ALL_TEST_TARGETS})
    target_sources(${tgt} PRIVATE ${LIB_CUDA_SOURCES})
    target_link_libraries(${tgt} PRIVATE CUDA::cudart)
    set_target_properties(${tgt} PROPERTIES CUDA_SEPARABLE_COMPILATION ON)
  endforeach()
endif()
